Fix invalid scrollbar-width property

--- a/packages/picmo/src/views/EmojiArea.scss
+++ b/packages/picmo/src/views/EmojiArea.scss
@@ -3,7 +3,7 @@
   overflow-y: auto;
   position: relative;
   scrollbar-color: var(--scrollbar-color) var(--scrollbar-background-color);
-  scrollbar-width: 8px;
+  scrollbar-width: thin;
 
   &::-webkit-scrollbar {
     background: var(--scrollbar-background-color);
